Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1083,26 +1083,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'europeset' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-0a585c4cd4e3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0meurope_set\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meurope\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCountry\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0meu_set\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meu\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCountry\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0meuropeset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdifference\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meu_set\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'europeset' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "{'  Switzerland ',\n",
+       " '  Vatican City ',\n",
+       " ' Albania ',\n",
+       " ' Andorra ',\n",
+       " ' Armenia ',\n",
+       " ' Azerbaijan ',\n",
+       " ' Belarus ',\n",
+       " ' Bosnia and Herzegovina ',\n",
+       " ' Faroe Islands (Denmark) ',\n",
+       " ' Georgia ',\n",
+       " ' Gibraltar (UK)',\n",
+       " ' Guernsey (UK) ',\n",
+       " ' Iceland ',\n",
+       " ' Isle of Man (UK) ',\n",
+       " ' Jersey (UK) ',\n",
+       " ' Kosovo ',\n",
+       " ' Liechtenstein ',\n",
+       " ' Macedonia ',\n",
+       " ' Moldova ',\n",
+       " ' Monaco ',\n",
+       " ' Montenegro ',\n",
+       " ' Norway ',\n",
+       " ' Russia',\n",
+       " ' San Marino ',\n",
+       " ' Serbia ',\n",
+       " ' Svalbard (Norway) ',\n",
+       " ' Turkey ',\n",
+       " ' Ukraine',\n",
+       " ' Åland Islands (Finland) '}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code comes here\n",
     "europe_set = set(europe.Country)\n",
     "eu_set = set(eu.Country)\n",
-    "europeset.difference(eu_set)"
+    "europe_set.difference(eu_set)"
    ]
   },
   {
