Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1120,7 @@
        " ' Åland Islands (Finland) '}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,7 +1129,7 @@
     "# Your code comes here\n",
     "europe_set = set(europe.Country)\n",
     "eu_set = set(eu.Country)\n",
-    "dispeu_set.issubset(europe_set)\n",
+    "eu_set.issu\n",
     "europe_set.difference(eu_set)"
    ]
   },
